Added some html files

--- a/campaign/locations/cities/Vifavea/Vifavea.html
+++ b/campaign/locations/cities/Vifavea/Vifavea.html
@@ -59,8 +59,14 @@
    <p>
     <div class="dnd-image-info">
      <div class="dnd-image-list">
-      <a href="img/Vifavea.jpg">
-       <img alt="Image" src="img/Vifavea.jpg"/>
+      <a href="img/Vifavea (1).jpg">
+       <img alt="Image" src="img/Vifavea (1).jpg"/>
+      </a>
+      <a href="img/Vifavea (2).jpg">
+       <img alt="Image" src="img/Vifavea (2).jpg"/>
+      </a>
+      <a href="img/Vifavea (3).jpg">
+       <img alt="Image" src="img/Vifavea (3).jpg"/>
       </a>
      </div>
      <div class="dnd-image-source">
