--- a/campaign/lore/guilds/index.html
+++ b/campaign/lore/guilds/index.html
@@ -56,6 +56,26 @@
      </a>
     </li>
     <li>
+     <a href="Mistborn_Artificer.html">
+      Mistborn Artificer
+     </a>
+    </li>
+    <li>
+     <a href="Mistwarden.html">
+      Mistwarden
+     </a>
+    </li>
+    <li>
+     <a href="The_Council_of_Shadows.html">
+      The Council of Shadows
+     </a>
+    </li>
+    <li>
+     <a href="The_Mistshadows.html">
+      The Mistshadows
+     </a>
+    </li>
+    <li>
      <a href="Tinkers Guild.html">
       Tinkers Guild
      </a>
@@ -70,6 +90,20 @@
       <i class="fas fa-camera">
       </i>
       img/gardeners_guild_crest.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/mistborn_artificers_crest (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/mistborn_artificers_crest (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/mistborn_artificers_crest (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/mistborn_artificers_crest (2).jpg
      </a>
     </li>
     <li>
