--- a/campaign/notes/index.html
+++ b/campaign/notes/index.html
@@ -55,6 +55,13 @@
       Genji Tinks Inventions
      </a>
     </li>
+    <li>
+     <a class="dir-index-link" href="to_players/index.html">
+      <i class="fas fa-folder">
+      </i>
+      to players
+     </a>
+    </li>
    </ul>
   </div>
  </body>
