--- a/campaign/notes/to_players/index.html
+++ b/campaign/notes/to_players/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,35 +46,10 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/lore/guilds/img
+   Index of /home/awtorode/git/DnD/campaign/notes/to_players
   </h1>
   <div class="indexLinks">
    <ul>
-    <li>
-     <a href="gardeners_guild_crest.jpg">
-      gardeners guild crest.jpg
-     </a>
-    </li>
-    <li>
-     <a href="mistborn_artificers_crest (1).jpg">
-      mistborn artificers crest (1).jpg
-     </a>
-    </li>
-    <li>
-     <a href="mistborn_artificers_crest (2).jpg">
-      mistborn artificers crest (2).jpg
-     </a>
-    </li>
-    <li>
-     <a href="tinkers_guild_crest.jpg">
-      tinkers guild crest.jpg
-     </a>
-    </li>
-    <li>
-     <a href="wanderers_guild_crest.jpg">
-      wanderers guild crest.jpg
-     </a>
-    </li>
    </ul>
   </div>
  </body>
