--- a/campaign/spells/index.html
+++ b/campaign/spells/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Chimeric_Ether.html">
+      Chimeric Ether
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="level_0/index.html">
       <i class="fas fa-folder">
       </i>
@@ -118,6 +123,223 @@
       <i class="fas fa-folder">
       </i>
       level 9
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_city (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_city (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_city (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_city (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_city (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_city (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_city (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_city (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_desert (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_desert (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_desert (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_desert (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_desert (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_desert (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_forest (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_forest (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_forest (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_forest (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_forest (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_forest (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_forest (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_forest (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_lake (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_lake (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_lake (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_lake (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_lake (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_lake (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_lake (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_lake (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_plains (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_plains (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_plains (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_plains (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_plains (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_plains (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_plains (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_plains (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_rocky (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_rocky (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_rocky (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_rocky (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_rocky (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_rocky (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_rocky (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_rocky (4).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_village (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_village (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_village (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_village (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_village (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_village (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_village (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_village (4).jpg
      </a>
     </li>
    </ul>
