Added improved list feature and some more files and music

--- a/campaign/items/magic/The_Puzzle_Box_of_Zytharoth.html
+++ b/campaign/items/magic/The_Puzzle_Box_of_Zytharoth.html
@@ -114,10 +114,18 @@
     Attempts to unravel the enigma of the Puzzle Box have been met with resounding failure. Its mechanisms, interwoven with multidimensional gears, arcane cogs, and intricate levers, remain obstinately resistant to mortal manipulation. Scholars, mages, and seekers of forbidden knowledge have dedicated lifetimes to deciphering its secrets, only to be confounded by its mystifying intricacy.
    </p>
    <p>
-    Each layer of the Puzzle Box presents a unique challenge, a test of both intellectual acumen and metaphysical understanding. Cryptic symbols, interdimensional pathways, and shifting magical energies guard the path to unlocking its mysteries. Some layers require the mastery of esoteric spells and incantations, while others demand the invocation of cosmic principles or the navigation of unfathomable geometries.
+    Each layer of the Puzzle Box presents a unique challenge, a
+    <a href="../../test.html">
+     test
+    </a>
+    of both intellectual acumen and metaphysical understanding. Cryptic symbols, interdimensional pathways, and shifting magical energies guard the path to unlocking its mysteries. Some layers require the mastery of esoteric spells and incantations, while others demand the invocation of cosmic principles or the navigation of unfathomable geometries.
    </p>
    <p>
-    The Puzzle Box is not merely a test of wit and knowledge
+    The Puzzle Box is not merely a
+    <a href="../../test.html">
+     test
+    </a>
+    of wit and knowledge
    </p>
    <p>
     it is a battleground of wills. It is said that within its depths, an eternal battle rages on, an ethereal clash between the imprisoned
