--- a/campaign/locations/landmarks/Guardian's_Watchtower.html
+++ b/campaign/locations/landmarks/Guardian's_Watchtower.html
@@ -86,7 +86,11 @@
     The Guardian's Watchtower, shrouded in the mists of time, is believed to have been constructed by an ancient civilization known for their mastery of architecture and engineering. Legends speak of a time when mythical creatures roamed the land, and invading forces threatened the peace and tranquility of the region. In response, the civilization erected this imposing tower as a strategic outpost, designed to safeguard the land and its inhabitants from any potential threats.
    </p>
    <p>
-    The construction of the Guardian's Watchtower is a testament to the ingenuity and skill of its builders. Made from sturdy stone and fortified with intricate defensive mechanisms, the tower has withstood the test of time and the ravages of nature. Its imposing walls, lined with weathered battlements and arrow slits, bear witness to countless centuries of vigilance and guardianship.
+    The construction of the Guardian's Watchtower is a testament to the ingenuity and skill of its builders. Made from sturdy stone and fortified with intricate defensive mechanisms, the tower has withstood the
+    <a href="../../test.html">
+     test
+    </a>
+    of time and the ravages of nature. Its imposing walls, lined with weathered battlements and arrow slits, bear witness to countless centuries of vigilance and guardianship.
    </p>
    <p>
     The interior of the tower is a labyrinthine network of chambers and passageways, each serving a specific purpose. Guardrooms, armories, and living quarters once housed the stalwart defenders who tirelessly stood watch, ready to protect the land from any danger that dared to approach. Within the heart of the tower, a grand hall stands as a tribute to the valor and bravery of those who once defended the realm.
