--- a/campaign/locations/landmarks/Veil_Of_Whispers.html
+++ b/campaign/locations/landmarks/Veil_Of_Whispers.html
@@ -95,7 +95,11 @@
     According to ancient lore, the Veil of Whispers originated from an extraordinary event long ago. It is said that a convergence of powerful elemental forces occurred within the hidden valley, giving birth to the mystical mist that perpetually veils its interior. The whispers that echo through the mist are believed to be the ethereal voices of long-forgotten spirits, sages, and guardians who sought to protect the valley's sacred secrets.
    </p>
    <p>
-    Entering the Veil of Whispers is no ordinary feat. The veil acts as a barrier between the mortal realm and the realm of the spirits, serving as a test of one's resolve, courage, and purity of heart. It is said that only those who approach with humility, respect, and a genuine thirst for knowledge can pass through the veil's ethereal boundary and enter the hidden valley beyond.
+    Entering the Veil of Whispers is no ordinary feat. The veil acts as a barrier between the mortal realm and the realm of the spirits, serving as a
+    <a href="../../test.html">
+     test
+    </a>
+    of one's resolve, courage, and purity of heart. It is said that only those who approach with humility, respect, and a genuine thirst for knowledge can pass through the veil's ethereal boundary and enter the hidden valley beyond.
    </p>
    <p>
     Legends are filled with stories of brave explorers who have ventured into the Veil of Whispers, guided by the soft murmurs and echoes that emanate from within. These whispers are said to carry ancient wisdom, prophecies, and cryptic riddles, offering guidance and warnings to those who are attuned to their mystic messages.
