--- a/campaign/lore/guilds/Wanderers_Guild.html
+++ b/campaign/lore/guilds/Wanderers_Guild.html
@@ -88,7 +88,11 @@
     At the heart of the Wanderers Guild lies a closely guarded magical secret—a method of telepathic communication that binds its members together. Through this ancient and intricate form of mental connection, every member of the guild can communicate with one another regardless of their physical distance. This extraordinary ability allows for swift and secure information sharing among the Wandering Wanderers, granting them a powerful advantage in their pursuit of knowledge.
    </p>
    <p>
-    To access the guild's telepathic network, individuals must undergo a rigorous initiation process, involving tests of magical aptitude, mental discipline, and unwavering dedication to the pursuit of knowledge. Once accepted into the guild, members are taught the intricate rituals and techniques necessary to tap into the shared consciousness of the Wanderers Guild. Through focused meditation and the channeling of arcane energy, they become part of a vast web of minds, connected by a psychic thread that spans the entire region of
+    To access the guild's telepathic network, individuals must undergo a rigorous initiation process, involving
+    <a href="../../test.html">
+     test
+    </a>
+    of magical aptitude, mental discipline, and unwavering dedication to the pursuit of knowledge. Once accepted into the guild, members are taught the intricate rituals and techniques necessary to tap into the shared consciousness of the Wanderers Guild. Through focused meditation and the channeling of arcane energy, they become part of a vast web of minds, connected by a psychic thread that spans the entire region of
     <a href="../../locations/regions/Matella/Matella.html">
      Matella
     </a>
