--- a/campaign/notes/index.html
+++ b/campaign/notes/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="Random_Meaningless_Interactions.html">
+      Random Meaningless Interactions
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="to_players/index.html">
       <i class="fas fa-folder">
       </i>
