--- a/campaign/spells/img/index.html
+++ b/campaign/spells/img/index.html
@@ -146,6 +146,26 @@
      </a>
     </li>
     <li>
+     <a href="the_chimeric_ether_mountains (1).jpg">
+      the chimeric ether mountains (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="the_chimeric_ether_mountains (2).jpg">
+      the chimeric ether mountains (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="the_chimeric_ether_mountains (3).jpg">
+      the chimeric ether mountains (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="the_chimeric_ether_mountains (4).jpg">
+      the chimeric ether mountains (4).jpg
+     </a>
+    </li>
+    <li>
      <a href="the_chimeric_ether_plains (1).jpg">
       the chimeric ether plains (1).jpg
      </a>
