--- a/campaign/spells/index.html
+++ b/campaign/spells/index.html
@@ -259,6 +259,34 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_mountains (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_mountains (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_mountains (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_mountains (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_mountains (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_mountains (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/the_chimeric_ether_mountains (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/the_chimeric_ether_mountains (4).jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/the_chimeric_ether_plains (1).jpg">
       <i class="fas fa-camera">
       </i>
