Added some html files and updated others

--- a/campaign/locations/cities/Vifavea/Vifavea.html
+++ b/campaign/locations/cities/Vifavea/Vifavea.html
@@ -631,5 +631,106 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-music">
+   <h3>
+    Music And Ambiance
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=EcJFmUaXT3g">
+       Azure Span - Music &amp; Snow Ambience | World of Warcraft Dragonflight (Winter Veil Edition)
+      </a>
+      <a href="../../../../music/Azure_Span__Music_&amp;_Snow_Ambience__World_of_Warcraft_Dragonflight_(Winter_Veil_Edition).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=68-rToI63FM">
+       The Lord of the Rings: Eastfarthing Woods Ambience &amp; Music
+      </a>
+      <a href="../../../../music/The_Lord_of_the_Rings_Eastfarthing_Woods_Ambience_&amp;_Music.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=NeOg8iCFfTA">
+       D&amp;D Ambience - Town Square Daytime
+      </a>
+      <a href="../../../../music/D&amp;D_Ambience__Town_Square_Daytime.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=tzAuoHaERXY">
+       Skyrim - Riverwood Ambiance (music, blacksmith, wind, river, live wallpaper)
+      </a>
+      <a href="../../../../music/Skyrim__Riverwood_Ambiance_(music,_blacksmith,_wind,_river,_live_wallpaper).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=QOeUVjmfwFw&amp;list=RDvFLTtaDgw-I">
+       Vanilla Zul'Gurub - Music &amp; Ambience (1 hour, 4K, World of Warcraft Classic)
+      </a>
+      <a href="../../../../music/Vanilla_Zul'Gurub__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=hBkcwy-iWt8">
+       Skyrim - Music &amp; Ambience - Day
+      </a>
+      <a href="../../../../music/Skyrim__Music_&amp;_Ambience__Day.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=EU8Zn5rHIDI">
+       PIRATE VILLAGE AMBIENCE - Pirate Music, Tavern music, Ocean
+      </a>
+      <a href="../../../../music/PIRATE_VILLAGE_AMBIENCE__Pirate_Music,_Tavern_music,_Ocean.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=xFjpTF4-PgI">
+       Oblivion - Music &amp; Ambience - Towns
+      </a>
+      <a href="../../../../music/Oblivion__Music_&amp;_Ambience__Towns.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=K3hjVijzrtM">
+       Boralus - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../../../music/Boralus__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=9fWeZxI2SDQ
+">
+       Vanilla Stranglethorn Vale - Music &amp; Ambience (3 hours, World of Warcraft Classic)
+      </a>
+      <a href="../../../../music/Vanilla_Stranglethorn_Vale__Music_&amp;_Ambience_(3_hours,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
