--- a/campaign/locations/cities/Vifavea/img/index.html
+++ b/campaign/locations/cities/Vifavea/img/index.html
@@ -50,6 +50,21 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Vifavea (1).jpg">
+      Vifavea (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Vifavea (2).jpg">
+      Vifavea (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Vifavea (3).jpg">
+      Vifavea (3).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
