--- a/campaign/notes/Music_For_Various_Scenarios.html
+++ b/campaign/notes/Music_For_Various_Scenarios.html
@@ -1,7 +1,570 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>Music For Various Scenarios</h1></div><hr/>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   Music For Various Scenarios
+  </title>
+  <link href="../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    Music For Various Scenarios
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-music">
+   <h3>
+    Tavern and Inn Music
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=-8GLXCl_dXc">
+       Relaxing Music, Celtic, Medieval, Tavern Music
+      </a>
+      <a href="../../music/Relaxing_Music,_Celtic,_Medieval,_Tavern_Music.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=pD8V6iwM9IQ">
+       🔥!NEW!🔥Enchanted Medieval Tavern | Perfect Sounds for Sleeping, Studying and Relaxing
+      </a>
+      <a href="../../music/🔥!NEW!🔥Enchanted_Medieval_Tavern__Perfect_Sounds_for_Sleeping,_Studying_and_Relaxing.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=Oeo2VCCtUZQ">
+       Alliance Taverns - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Alliance_Taverns__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=HrvA2eAHcJ4&amp;list=RDOeo2VCCtUZQ">
+       Horde Taverns - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Horde_Taverns__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=3p8jLMz0lu8&amp;list=RDbSwzMgZqcR4">
+       Taverns of Azeroth - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Taverns_of_Azeroth__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=EIuV7qGXmpk">
+       Beautiful Medieval &amp; Fantasy TAVERN MUSIC with Ambience! (Folk, Instrumental) | Tavern Music Vol. 1
+      </a>
+      <a href="../../music/Beautiful_Medieval_&amp;_Fantasy_TAVERN_MUSIC_with_Ambience!_(Folk,_Instrumental)__Tavern_Music_Vol._1.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=vyg5jJrZ42s">
+       Medieval Fantasy Tavern | D&amp;D Fantasy Music and Ambience
+      </a>
+      <a href="../../music/Medieval_Fantasy_Tavern__D&amp;D_Fantasy_Music_and_Ambience.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=wLlovxa3VJ0">
+       Fantasy Bard/Tavern Music Compilation
+      </a>
+      <a href="../../music/Fantasy_BardTavern_Music_Compilation.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=dd10InDdvJE">
+       Skyrim - Music &amp; Ambience - Taverns
+      </a>
+      <a href="../../music/Skyrim__Music_&amp;_Ambience__Taverns.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=RIJHVJgeGNA">
+       Beautiful Medieval &amp; Fantasy TAVERN MUSIC with Ambience! (Folk, Instrumental) | Tavern Music Vol. 2
+      </a>
+      <a href="../../music/Beautiful_Medieval_&amp;_Fantasy_TAVERN_MUSIC_with_Ambience!_(Folk,_Instrumental)__Tavern_Music_Vol._2.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=roABNwbjZf4
+">
+       Tavern/Inn Music - Fantasy Medieval Music (No Copyright) Vol. 2
+      </a>
+      <a href="../../music/TavernInn_Music__Fantasy_Medieval_Music_(No_Copyright)_Vol._2.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-music">
+   <h3>
+    City and Town Music
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=bSwzMgZqcR4">
+       Silvermoon City - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Silvermoon_City__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=ACgoXvkhlPE&amp;list=RDbSwzMgZqcR4">
+       Suramar - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Suramar__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=roMWEeV2P4U">
+       Stormwind - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Stormwind__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=aFbCofgwdXo">
+       Ironforge - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Ironforge__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=EU8Zn5rHIDI">
+       PIRATE VILLAGE AMBIENCE - Pirate Music, Tavern music, Ocean
+      </a>
+      <a href="../../music/PIRATE_VILLAGE_AMBIENCE__Pirate_Music,_Tavern_music,_Ocean.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=R8jsJQnKhMo">
+       Gilneas - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Gilneas__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=BV7mKCgKhZY">
+       Dalaran (Northrend) - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Dalaran_(Northrend)__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=62j1xAdYKAQ">
+       Middle Earth | Rivendell - Music &amp; Ambience
+      </a>
+      <a href="../../music/Middle_Earth__Rivendell__Music_&amp;_Ambience.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=pXseyytvgkg">
+       Exodar - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Exodar__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=wLY-5S-6xuY">
+       Darnassus - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Darnassus__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=YoNI_1e9Yd0">
+       Tiragarde Sound - Tranquil Music &amp; Ambience (1 hour, 4K, World of Warcraft Battle for Azeroth)
+      </a>
+      <a href="../../music/Tiragarde_Sound__Tranquil_Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Battle_for_Azeroth).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=xFjpTF4-PgI">
+       Oblivion - Music &amp; Ambience - Towns
+      </a>
+      <a href="../../music/Oblivion__Music_&amp;_Ambience__Towns.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=DMAm2Ozz0z8">
+       Oribos - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Oribos__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=QHV_FTIm6zY">
+       Vanilla Ironforge - Music &amp; Ambience (2 hours, World of Warcraft Classic)
+      </a>
+      <a href="../../music/Vanilla_Ironforge__Music_&amp;_Ambience_(2_hours,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=K3hjVijzrtM">
+       Boralus - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Boralus__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=u1SgcZAIygY">
+       Sanctum of Light - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Sanctum_of_Light__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=OwF0zVLDLJo
+">
+       Hall of the Guardian - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Hall_of_the_Guardian__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-music">
+   <h3>
+    Dark and Mysterious
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=BafgaT1PS_A">
+       Hellfire Peninsula - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Hellfire_Peninsula__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=jpb1nH2q_0k">
+       Duskwood - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Duskwood__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=jrYxp3OuB1s">
+       Karazhan - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Karazhan__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=rzL9ZpnmSYU">
+       Silithus - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Silithus__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=HOdFlmnyaTQ">
+       Ahn'Qiraj - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Ahn'Qiraj__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=P3r_6wUHYIY">
+       Shadowmoon Valley (Outland) - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Shadowmoon_Valley_(Outland)__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=uAwIBtov5EM
+">
+       Netherstorm - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Netherstorm__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-music">
+   <h3>
+    Relaxing and Calm
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=cqbomS1STFY">
+       minecraft music but you're no longer a kid...
+      </a>
+      <a href="../../music/minecraft_music_but_you're_no_longer_a_kid....mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=0msy-ALryyw">
+       Nagrand (Draenor) - Music &amp; Ambience - World of Warcraft
+      </a>
+      <a href="../../music/Nagrand_(Draenor)__Music_&amp;_Ambience__World_of_Warcraft.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=_eKZJhRDTuw">
+       Skyrim Ambient Music for Relaxation.
+      </a>
+      <a href="../../music/Skyrim_Ambient_Music_for_Relaxation..mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=PZFvG_Yl0l4
+">
+       Campfire in a Deep Forest at Night | Campsite Video Game Ambience ASMR
+      </a>
+      <a href="../../music/Campfire_in_a_Deep_Forest_at_Night__Campsite_Video_Game_Ambience_ASMR.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-music">
+   <h3>
+    Battle and Boss Music
+   </h3>
+   <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=Aimk57xerkg">
+       Warriors Of The Horde - ( Music for the Horde)
+      </a>
+      <a href="../../music/Warriors_Of_The_Horde__(_Music_for_the_Horde).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=Os1_G89pMJc">
+       Hellscream's True Horde - (Legendary Epic Music)
+      </a>
+      <a href="../../music/Hellscream's_True_Horde__(Legendary_Epic_Music).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=lAGm9MTyRJ8">
+       Combat Music Megamix - The Witcher 3: Wild Hunt
+      </a>
+      <a href="../../music/Combat_Music_Megamix__The_Witcher_3_Wild_Hunt.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=cej2O-mem64">
+       TO KILL A GOD | Epic Battle Dark Heroic Music | Epic Music Mix by @audiomachine
+      </a>
+      <a href="../../music/TO_KILL_A_GOD__Epic_Battle_Dark_Heroic_Music__Epic_Music_Mix_by_@audiomachine.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=E17hDWJKBsY">
+       Viking Music 2023 | World's Most Dark &amp; Powerful Viking Music | EPIC MUSIC | VIKING BATTLE MUSIC
+      </a>
+      <a href="../../music/Viking_Music_2023__World's_Most_Dark_&amp;_Powerful_Viking_Music__EPIC_MUSIC__VIKING_BATTLE_MUSIC.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=IOdUnggf5P8">
+       Rise of the Blood Elves - (Heroic Dramatic Epic Music Mix)
+      </a>
+      <a href="../../music/Rise_of_the_Blood_Elves__(Heroic_Dramatic_Epic_Music_Mix).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=KvE_KXtlZIs">
+       I WILL PROTECT YOU 'TILL MY LAST BREATH | Best Epic Heroic Orchestral Music | Epic Music Mix
+      </a>
+      <a href="../../music/I_WILL_PROTECT_YOU_'TILL_MY_LAST_BREATH__Best_Epic_Heroic_Orchestral_Music__Epic_Music_Mix.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=66XTsTA4WjY">
+       Most Powerful Epic Music Mix | Ultimate Epic Battle Music Mix | Powerful Heroic Orchestral Music
+      </a>
+      <a href="../../music/Most_Powerful_Epic_Music_Mix__Ultimate_Epic_Battle_Music_Mix__Powerful_Heroic_Orchestral_Music.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=NtqRjGP3uoY">
+       LEGENDARY | MOST EPIC  BATTLE MUSIC | 1 Hour Orchestral Rock Mix | Antti Martikainen
+      </a>
+      <a href="../../music/LEGENDARY__MOST_EPIC__BATTLE_MUSIC__1_Hour_Orchestral_Rock_Mix__Antti_Martikainen.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=X0XEmTdovn8">
+       Iron Horde - (Epic Battle mix)
+      </a>
+      <a href="../../music/Iron_Horde__(Epic_Battle_mix).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=pGw2ztHACxA">
+       D&amp;D / RPG Battle Combat Music
+      </a>
+      <a href="../../music/D&amp;D__RPG_Battle_Combat_Music.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=bRSxdSJv3Lk
+">
+       BERSERK | 1 HOUR of Epic Dark Dramatic Intense Massive Action Battle Music
+      </a>
+      <a href="../../music/BERSERK__1_HOUR_of_Epic_Dark_Dramatic_Intense_Massive_Action_Battle_Music.mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
+   </p>
+  </div>
+  <hr/>
+ </body>
+</html>
