--- a/campaign/notes/index.html
+++ b/campaign/notes/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="Music_For_Various_Scenarios.html">
+      Music For Various Scenarios
+     </a>
+    </li>
+    <li>
      <a href="Random_Meaningless_Interactions.html">
       Random Meaningless Interactions
      </a>
